--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel ./src/views/index.html",
-    "build": "parcel build ./src/views/index.html"
+    "dev": "parcel ./src/views/landing.html",
+    "build": "parcel build ./src/views/landing.html"
   },
   "keywords": [],
   "author": "",
